namespace WeddingBidders.Server.Models
{
    public enum AccountType
    {
        Bidder,
        Customer,
        Internal
    }
}