namespace WeddingBidders.Server.Models
{
    public enum BidderType
    {
        Caterer = 0,
        Photographer = 1,
        MakeUpArtist = 2,
        EventPlanner = 3,
        DiscJockey = 4
    }
}