namespace WeddingBidders.Server.Models
{
    public class Category
    {
        public Category() { }

        public int Id { get; set; }
        public string Name { get; set; }
    }
}