namespace WeddingBidders.Server.Models
{
    public enum IssueStatus
    {
        New = 0,
        Open = 1,
        Resolved = 2
    }
}