namespace WeddingBidders.Server.Models
{
    public class Photo: BaseEntity
    {
        public string Url { get; set; }
    }
}