namespace WeddingBidders.Server.Models
{
    public enum ProfileType
    {
        Customer = 0,
        Caterer = 1,
        Photographer = 2,
        MakeUpArtist = 3,
        EventPlanner = 4,
        Internal = 5,
        DiscJockey = 6
    }
}